fix: remove duplicate conversion results